force-app/main/default/objects/Task_Extension__c/Task_Extension__c.object-meta.xml
<CustomObject>
    <label>Task Extension</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Extension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>