force-app/main/default/objects/Task_Extension__c/fields/AVY_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>AVY_Campaign_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Campaign Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>