force-app/main/default/objects/Task_Extension__c/fields/AVY_pim_sessionid__c.field-meta.xml
<CustomField>
    <fullName>AVY_pim_sessionid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PIM Session ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>