force-app/main/default/objects/Task_Extension__c/fields/Callback_ID__c.field-meta.xml
<CustomField>
    <fullName>Callback_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Callback ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>