force-app/main/default/objects/Task_Extension__c/fields/Callback_Mode__c.field-meta.xml
<CustomField>
    <fullName>Callback_Mode__c</fullName>
    <label>Callback Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strict Agent</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>