force-app/main/default/objects/Task_Extension__c/fields/Callback_Notes__c.field-meta.xml
<CustomField>
    <fullName>Callback_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Callback Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>