force-app/main/default/objects/Task_Extension__c/fields/Callback_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Callback_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Callback Phone Number</label>
    <type>Phone</type>
</CustomField>